# cadinstall

./: .gitignore  LICENSE  README.md  pyproject.toml
cadinstall/: cadinstall.py  install.py  log.py  utils.py
cadinstaller/: __init__.py  __main__.py  cadinstall.py  install.py  tool_defs.py  utils.py
config/: cadinstall.json.example
etc/: allowed_commands  rsync_exclude_list.txt
lib/: cadinstall.py  executor.py  install.py  log.py  my_globals.py  tool_defs.py  utils.py
src/: sudo.c
tests/: test_cadinstall.py  test_executor.py
